fixed text overflow on main screen

--- a/assets/css/presentacion-principal/presentacion-principal.css
+++ b/assets/css/presentacion-principal/presentacion-principal.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: calc( 50vh - 50px);
+    min-height: calc( 50vh - 50px);
     padding: 0 8%;
 }
 
@@ -19,6 +19,7 @@
 
 .presentacion-container__presentacion__link-redes {
     display: flex;
+    align-items: center;
     padding: 0;
 }
 
