--- a/assets/css/sobre-mi/sobre-mi.css
+++ b/assets/css/sobre-mi/sobre-mi.css
@@ -1,5 +1,5 @@
 .sobre-mi-container {
-    height: 50vh;
+    min-height: 50vh;
     background-color: var(--color-de-fondo-2);
     display: flex;
     align-items: center;
